[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "task-queue-checker"
version = "0.0.4"
authors = [
  { name="Raúl Cobiellas", email="raulodev@gmail.com" },
]
description = "Tool designed to simplify the management and monitoring of task queues in Python environments"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/raulodev/task-queue-checker"
Issues = "https://github.com/raulodev/task-queue-checker/issues"